cluster/base/kimkues-wp/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: kimkues-wp
spec: {}
status: {}
