cluster/base/kimkues-wp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kimkues-wp
  namespace: kimkues-wp
  labels:
    app: kimkues-wp
spec:
  selector:
    matchLabels:
      app: kimkues-wp
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: kimkues-wp
        tier: frontend
    spec:
      containers:
      - image: wordpress
        name: wordpress
        ports:
        - containerPort: 80
          name: wordpress
        volumeMounts:
        - name: kimkues-wp-persistent-storage
          mountPath: /var/www/html
      volumes:
      - name: kimkues-wp-persistent-storage
        persistentVolumeClaim:
          claimName: kimkues-wp-pv-claim
