cluster/base/kimkues-wp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kimkues-wp
  namespace: kimkues-wp
  annotations:
    ingress.kubernetes.io/browser-xss-filter: "true"
    ingress.kubernetes.io/content-type-nosniff: "true"
    ingress.kubernetes.io/custom-frame-options-value: SAMEORIGIN
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  rules:
    - host: kimkues.invalid
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: kimkues-wp
              port: 
                number: 80
  tls:
    - secretName: kimkues-wp-blog-tls
      hosts:
        - kimkues.invalid
